<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_usage_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step4"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/step5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/step6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step6"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>
